--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Set root category priority to INFO and its only appender to CONSOLE.
 #log4j.rootCategory=INFO, CONSOLE            debug   info   warn error fatal
-log4j.rootCategory=debug, CONSOLE, LOGFILE
+log4j.rootLogger=debug, CONSOLE, LOGFILE,ERROR
 
 # Set the enterprise logger category to FATAL and its only appender to CONSOLE.
 log4j.logger.org.apache.axis.enterprise=FATAL, CONSOLE
@@ -12,8 +12,17 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %-6r [%15.15t] %-5p 
 
 # LOGFILE is set to be a File appender using a PatternLayout.
 log4j.appender.LOGFILE=org.apache.log4j.FileAppender
-log4j.appender.LOGFILE.File=d:\axis.log
+log4j.appender.LOGFILE.File=../EAlbum/Logfile.log
 log4j.appender.LOGFILE.Append=true
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%d{ISO8601} %-6r [%15.15t] %-5p %30.30c %x - %m\n
+
+# LOGFILE is set to be a File appender using a PatternLayout.
+log4j.appender.ERROR=org.apache.log4j.FileAppender
+log4j.appender.ERROR.File=../EAlbum/LogError.log
+log4j.appender.ERROR.Append=true
+log4j.appender.ERROR.ImmediateFlush=true
+log4j.appender.ERROR.Threshold = ERROR
+log4j.appender.ERROR.layout=org.apache.log4j.PatternLayout
+log4j.appender.ERROR.layout.ConversionPattern=%d{ISO8601} %-6r [%15.15t] %-5p %30.30c %x - %m\n
 
