--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClass = com.mysql.cj.jdbc.Driver
-jdbc.jdbcUrl = jdbc:mysql://localhost:3306/EAlbum?&serverTimezone=Asia/Shanghai
+jdbc.jdbcUrl = jdbc:mysql://localhost:3306/EAlbum?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 jdbc.user = root
 jdbc.password = 123
